--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -62,8 +62,10 @@
                       $( '.addAction' ).on( 'click', function(ev) {
                           var $this = $(this);
                           var create_action = $this.data('action');
+                          var list  = $this.data('list');
+                          alert( list );
                           var parent = yote.fetch( $this.data('parent') );
-                          var newstep = parent[ create_action ]( [], function() {
+                          var newentry = parent[ create_action ]( [list], function() {
                               selectScene( currScene );
                           } );
                       } );
@@ -93,12 +95,12 @@
                           var line = lines[i];
                           var buf = '<div><br>\
  <input class="updateField showField product-line" data-id="' + line.id + '" data-field="name" type="text">\
- <button class="delAction product-line" data-parent="' + currScene.id + '" data-id="' + line.id + '" data-del-action="drop_line">Delete</button> \
+ <button class="delAction product-line" data-parent="' + currScene.id + '" data-id="' + line.id + '" data-del-action="remove_entry">Delete</button> \
  <br>\
  Desc <input class="updateField showField product-line" data-id="' + line.id + '" data-field="description" type="text">\
  <span  class="showField" data-id="' + line.id + '" data-field="production_rate"></span> units per hour\
  <h5>Process Steps</h5>\
- <button class="addAction product-line" data-action="new_step" data-parent="' + line.id + '">Add Step</button>\
+ <button class="addAction product-line" data-action="add_entry" data-list="steps"  data-parent="' + line.id + '">Add Step</button>\
  <div style="margin-left:3em;" data-product-line-id="' + line.id + '">';
                           var steps = line.get( 'steps' ).toArray();
                           for( var j=0; j<steps.length; j++ ) {
@@ -237,7 +239,7 @@
     <hr>
     Available Scenarios <select id="scenario_sel"></select>
     <button type="button" id="new_scene">Create New Scenario</button>
-        <button type="button" class="delAction scenario" style="display:none" data-id="" data-parent="" data-del-action="drop_scene" id="del_scene">Delete Scenario</button> <BR>
+        <button type="button" class="delAction scenario" style="display:none" data-id="" data-parent="" data-del-action="remove_entry" id="del_scene">Delete Scenario</button> <BR>
 <div>
     Scenario Name <input class="updateField showField scenario" data-id="ofobj" data-field="name" type="text"> <br>
     Description <input class="updateField showField scenario" data-id="ofobj" data-field="description" type="text"> <br>
