--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -1,27 +1,27 @@
 <html>
   <head>
-    <title>Bakery Calcy</title>
+    <title> Calcy Testy</title>
     <script src="/__/js/yote.js"></script>
-    <script src="js/bakery.js"></script>
+    <script src="js/calctest.js"></script>
 
     <script>
       function init() {
           yote.initMain();
 
           yote.doSequence( [ //functionis passed in take two args, a callback and a fail handler
-              yote.loadApp( 'Bakery', function( app ) { 
+              yote.loadApp( 'CalcTest', function( app ) { 
                   // loading the app so that yote objects can be referenced here
                   // and when referenced, they can be connected to controls.
                   window.app = app; //so that by name referencing of this variable works, and then 
               } ),
-              yote.workerLoadInclude( "/__/bakery/js/bakery.js" ),
+              yote.workerLoadInclude( "/__/calc_test/js/calctest.js" ),
               yote.readyWorkerCall( 'init' ), //calls the method init
               function() {
                   console.log( '*************** ADDL **********************' );
                   document.getElementById( "calc" ).addEventListener('click',function() {
-console.log( 'calc' );
+                      console.log( 'calc' );
                       yote.callWorker( {
-                          call_name : 'calc',
+                          callpath : 'calc',
                           params    : {
                               number_employees : document.getElementById( 'numEmpl' ).value,
                               hourly_wage      : document.getElementById( 'wage' ).value
@@ -30,8 +30,6 @@ console.log( 'calc' );
                               // this response has the result of the calculation state
 console.log( [ 'click resp', response ] );
                               // display the state of the object, which, for this case is displayed in the app
-                              var app = window.app;
-
                           }
                       } );
                   } );
@@ -47,7 +45,7 @@ console.log( [ 'click resp', response ] );
 
   </head>
   <body onLoad="init()">
-    <h1>Bakery Calcy</h1>
+    <h1>TEst Calcy</h1>
 
     <h2>Just have a simple calculation and result for now. How about employees times salary to find monthly cost</h2>
     
