--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -450,7 +450,8 @@
               var steps = prd.get( 'steps' );
               steps.each( function( step, i ) {
                   var row = fill_template( '#step-row', {
-                      STEP : step.id
+                      STEP : step.id,
+                      PROD : prd.id
                   }, [ 'id' ] );
                   $tab.append( row );
                   watchForUpdates(step);
@@ -519,85 +520,88 @@
       Selected Scenario <select class="showField editField app" data-field="current_scenarios"  data-var-is="object" data-src-field="scenarios"></select>
       <a href="" class="delAction app-child scenario" id="del_scenario" data-needs-confirmation="y" data-from="scenarios" data-delete-message="Really delete this scenario?">(Delete this Scenario)</a>
     </p>
-        <div>
-          <h3>Configure Scenario '<span class="showField scenario" data-field="name"></span>'</h3>
-          <table>
-            <tr><th>Scenario Name</th>
-            <td>
-              <div class="updateFieldControl scenario" data-classes="scenario" data-field="name" data-input-type="text" ></div>
-              </td></tr>
-            <tr><th>Description</th>
-            <td><div class="updateFieldControl scenario" data-classes="scenario" data-field="description" data-input-type="text"></div> </td></tr>
-            <tr><th>Number of Employees</th>
-            <td><div class="updateFieldControl scenario" data-classes="scenario" data-field="employee_count" data-input-type="number"></div>  </td></tr>
-            <tr><th>Employee Pay</th>
-            <td>$ <div class="updateFieldControl scenario" data-classes="scenario" data-field="employee_pay_rate" data-input-type="number"></div> hour </td></tr>
-            <tr><th>Monthly Rent</th>
-            <td>$ <div class="updateFieldControl scenario" data-classes="scenario" data-field="monthly_rent" data-input-type="number"></div> /month </td></tr>            
-            <tr><th>Monthly Utilities</th>
-            <td>$ <div class="updateFieldControl scenario" data-classes="scenario" data-field="monthly_utilities" data-input-type="number"></div> /month </td></tr>
-            <tr><th>Employee Monthly Cost</th><td>$<span class="showField scenario" data-format="$" data-field="employee_monthly_cost"></span> / month</td></tr>
-            <tr><th>Monthly Cost</th><td>$<span class="showField scenario" data-format="$" data-field="monthly_cost"></span> / month</td></tr>
-          </table>
-    <hr>
-    <h4 id="product-title">Products Summary</h4>
-    <table id="product-table">
-        <thead>
-          <tr> <th>Product</th> <th>Sale Price</th> <th>Sales</th> <th>Profit</th> <th>Food Cost</th> <th>Labor Cost</th></tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-    <hr>
-    <h4 id="product-title">Product Detail</h4>
-
-    <select class="showField editField scenario" data-field="current_product_lines" data-var-is="object" data-src-field="product_lines" id="prod_sel"></select>
-
-    <a href="" class="addAction scenario" data-list="product_lines">Create New Product Line</a>
-    <a href="" class="delAction scenario-child product" id="del_prod" data-needs-confirmation="y" data-from="product_lines" data-delete-message="Really delete this product?">Delete Product Line</a>
-    <span id="no_products">No Products</span>
-    <div id="curr_product">
-      Name : <div class="updateFieldControl product" data-classes="product" data-field="name" data-input-type="text"></div> <br>
-      Notes : <div class="updateFieldControl product" data-classes="product" data-field="notes" data-input-type="text"></div>
-
-    <table>
-      <tr> <th>Cost / batch</th> <td><div class="updateFieldControl product" data-classes="product" data-field="cost_per_batch" data-input-type="number"></div></td> </tr>
-      <tr> <th>Sale Price / unit</th> <td><div class="updateFieldControl product" data-classes="product" data-field="sale_price" data-input-type="number"></div></td> </tr>
-      <tr>
-        <th>Expected Sales</th> <td><div class="updateFieldControl product" data-classes="product" data-field="expected_sales" data-input-type="number"></div></td>
-        <th>per</th> <td><select class="showField editField product" data-field="expected_sales_per" data-src-collection="expected_sales_per"></select></td>
-       </tr>
-
-
-        <tr> <th>Production Rate </th> <td><div class="showField product" data-format="$" data-field="production_rate"></span></td> </tr>
-        <tr> <th>Produced in Day </th> <td><span class="showField product" data-format="$" data-field="produced_in_day"></span></td> </tr>
-        <tr> <th>Produced in Month </th> <td><span class="showField product" data-format="$" data-field="produced_in_month"></span></td> </tr>
-        <tr><th> </th> <td><div></div></td> </tr>
+    <div>
+      <h3>Configure Scenario '<span class="showField scenario" data-field="name"></span>'</h3>
+      <table>
+        <tr><th>Scenario Name</th>
+          <td>
+            <div class="updateFieldControl scenario" data-classes="scenario" data-field="name" data-input-type="text" ></div>
+        </td></tr>
+        <tr><th>Description</th>
+          <td><div class="updateFieldControl scenario" data-classes="scenario" data-field="description" data-input-type="text"></div> </td></tr>
+        <tr><th>Number of Employees</th>
+          <td><div class="updateFieldControl scenario" data-classes="scenario" data-field="employee_count" data-input-type="number"></div>  </td></tr>
+        <tr><th>Employee Pay</th>
+          <td>$ <div class="updateFieldControl scenario" data-classes="scenario" data-field="employee_pay_rate" data-input-type="number"></div> hour </td></tr>
+        <tr><th>Monthly Rent</th>
+          <td>$ <div class="updateFieldControl scenario" data-classes="scenario" data-field="monthly_rent" data-input-type="number"></div> /month </td></tr>            
+        <tr><th>Monthly Utilities</th>
+          <td>$ <div class="updateFieldControl scenario" data-classes="scenario" data-field="monthly_utilities" data-input-type="number"></div> /month </td></tr>
+        <tr><th>Employee Monthly Cost</th><td>$<span class="showField scenario" data-format="$" data-field="employee_monthly_cost"></span> / month</td></tr>
+        <tr><th>Monthly Cost</th><td>$<span class="showField scenario" data-format="$" data-field="monthly_cost"></span> / month</td></tr>
       </table>
-      <h4>Ingredients</h4>
-      <table border="1" id="ingredients_tab">
+      <hr>
+      <h4 id="product-title">Products Summary</h4>
+      <table id="product-table">
         <thead>
-          <tr> <th>Ingredient</th> <th>Amount per Batch</th> <th>Notes</th> <th>Action</th> </tr>
+          <tr> <th>Product</th> <th>Sale Price</th> <th>Estimated Sales</th> <th>Revenue</th> <th>Cost</th> <th>Profit</th> </tr>
         </thead>
         <tbody>
         </tbody>
       </table>
-      <select class="editField showField product" 
-              id="new_ingredient"
-              data-src-collection="ingreds"
-              ></select>
+      <hr>
+      <h4 id="product-title">Product Detail</h4>
 
-      <h4>Steps</h4>
+      <select class="showField editField scenario" data-field="current_product_lines" data-var-is="object" data-src-field="product_lines" id="prod_sel"></select>
 
-      <table border=1 id="steps_tab">
-        <thead>
-    <tr> <th>Name</th> <th>Items per Batch</th>  <th>Duration of Batch ( hours) </th> <th>Employees Needed</th> <th>Notes</th> <th>Overhead ($)</th> <th>Actions</th> </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
-      <a href="" class="addAction product" data-list="steps">New Step</a>
-    </div>
+      <a href="" class="addAction scenario" data-list="product_lines">Create New Product Line</a>
+      <a href="" class="delAction scenario-child product" id="del_prod" data-needs-confirmation="y" data-from="product_lines" data-delete-message="Really delete this product?">Delete Product Line</a>
+      <span id="no_products">No Products</span>
+      <div id="curr_product">
+        Name : <div class="updateFieldControl product" data-classes="product" data-field="name" data-input-type="text"></div> <br>
+        Notes : <div class="updateFieldControl product" data-classes="product" data-field="notes" data-input-type="text"></div>
+
+        <table>
+          <tr> <th>Cost / batch</th> 
+            <td><div class="updateFieldControl product" data-classes="product" data-field="total_cost_per_batch" data-input-type="number"></div></td> 
+          </tr>
+          <tr> <th>Sale Price / unit</th>
+            <td><div class="updateFieldControl product" data-classes="product" data-field="sale_price" data-input-type="number"></div></td>
+          </tr>
+          <tr>
+            <th>Expected Sales</th> <td><div class="updateFieldControl product" data-classes="product" data-field="expected_sales" data-input-type="number"></div></td>
+            <th>per</th> <td><select class="showField editField product" data-field="expected_sales_per" data-src-collection="expected_sales_per"></select></td>
+          </tr>
+          <tr> <th>Production Rate </th> <td><span class="showField product" data-format="$" data-field="production_rate"></span></td> </tr>
+          <tr> <th>Produced in Day </th> <td><span class="showField product" data-format="$" data-field="produced_in_day"></span></td> </tr>
+          <tr> <th>Produced in Month </th> <td><span class="showField product" data-format="$" data-field="produced_in_month"></span></td> </tr>
+          <tr><th> </th> <td><div></div></td> </tr>
+        </table>
+
+        <h4>Ingredients</h4>
+        <table border="1" id="ingredients_tab">
+          <thead>
+            <tr> <th>Ingredient</th> <th>Amount per Item</th> <th>Notes</th> <th>Action</th> </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <select class="editField showField product" 
+                id="new_ingredient"
+                data-src-collection="ingreds"
+                ></select>
+
+        <h4>Steps</h4>
+
+        <table border=1 id="steps_tab">
+          <thead>
+            <tr> <th>Name</th> <th>Items per step</th>  <th>Duration of Step (hours) </th> <th>Min time for step</th> <th>Employees Needed</th> <th>Overhead per Run</th> <th>Overhead per Hour</th> <th>Notes</th> <th>Actions</th> </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <a href="" class="addAction product" data-list="steps">New Step</a>
+      </div>
     </div>
     <hr>
 
@@ -617,8 +621,12 @@
           <td> <div class="updateFieldControl" data-id="STEP" data-field="name"></div> </td>
           <td> <div class="updateFieldControl" data-id="STEP" data-field="produced_in_run" data-input-type="number"></div> </td>
           <td> <div class="updateFieldControl" data-id="STEP" data-field="run_hours" data-input-type="number"></div> </td>
+          <td> <div class="updateFieldControl" data-id="STEP" data-field="min_run_time" data-input-type="number"></div> </td>
           <td> <div class="updateFieldControl" data-id="STEP" data-field="employees_required"></div> </td>
+          <td> <div class="updateFieldControl" data-id="STEP" data-field="overhead_cost_per_run"></div> </td>
+          <td> <div class="updateFieldControl" data-id="STEP" data-field="overhead_cost_per_hour"></div> </td>
           <td> <div class="updateFieldControl" data-id="STEP" data-field="notes"></div> </td>
+          <td> <a href="" class="delAction" data-id="STEP" data-parent="PROD" data-from="steps">delete</a> </td>
         </tr>
 
 
@@ -628,6 +636,9 @@
           <td>
             <div class="updateFieldControl" data-id="PROD" data-field="expected_sales" data-format="$" data-input-type="number"></div>
             <select class="showField editField" data-id="PROD" data-field="expected_sales_per" data-src-collection="expected_sales_per"></select>
+          </td>
+          <td>
+            
           </td>
         </tr>
 
