big change in parameter passing with this update. hashes and lists can be passed into yote without needing to be yote objects. conversely, a future update will change it so the reverse is also true

--- a/samp/html/index.html
+++ b/samp/html/index.html
@@ -18,6 +18,10 @@
               yote.readyWorkerCall( 'init' ), //calls the method init
               function() {
                   // tie the calcResult field of the app to an informative hourCost div
+                  var app = yote.fetch_app( 'CalcTest' );
+                  app.addUpdateListener( function( appo ) {
+                      document.getElementById( 'hourCost' ).val = appo.get('calcResult');
+                  } );
                   
                   document.getElementById( "calc" ).addEventListener('click',function() {
                       console.log( 'calc' );
